--- a/lab-02/loops.yml
+++ b/lab-02/loops.yml
@@ -1,15 +1,15 @@
 ---
 - hosts: localhost
-  vars:
-    listvar1:
-    - 'a'
-    - 'b'
-    - 'c'
-  tasks:
-    - debug:
-        msg: "{{ item[0] }}"
-      with_items:
-        - "{{ listvar1 }}"
+  # vars:
+  #   listvar1:
+  #   - 'a'
+  #   - 'b'
+  #   - 'c'
+  # tasks:
+  #   - debug:
+  #       msg: "{{ item[0] }}"
+  #     with_items:
+  #       - "{{ listvar1 }}"
 
     # - name: Create files on loop
     #   command: touch /tmp/foo
@@ -17,11 +17,11 @@
     # - name: Create files on loop
     #   command: touch /tmp/bar
 
-    # - name: Create files on loop
-    #   command: touch /tmp/{{ item }}
-    #   with_items:
-    #     - foo
-    #     - bar
+    - name: Create files on loop
+      command: touch /tmp/{{ item }}
+      with_items:
+        - foo
+        - bar
 
     # - name: Testing out some tested loop conditions
     #   debug: msg="nested test a={{ item[0] }} b={{ item[1] }} c={{ item[2] }}"
