fixed loops yml

--- a/lab-02/loops.yml
+++ b/lab-02/loops.yml
@@ -1,5 +1,12 @@
 ---
 - hosts: localhost
+  tasks:
+  - name: Create files on loop
+    command: touch /tmp/{{ item }}
+    with_items:
+      - foo
+      - bar
+
   # vars:
   #   listvar1:
   #   - 'a'
@@ -16,12 +23,6 @@
     
     # - name: Create files on loop
     #   command: touch /tmp/bar
-
-  - name: Create files on loop
-    command: touch /tmp/{{ item }}
-    with_items:
-      - foo
-      - bar
 
     # - name: Testing out some tested loop conditions
     #   debug: msg="nested test a={{ item[0] }} b={{ item[1] }} c={{ item[2] }}"
