--- a/lab-03/ansible-vars.yaml
+++ b/lab-03/ansible-vars.yaml
@@ -18,9 +18,9 @@
     #     msg: "System {{ inventory_hostname }} has uuid {{ ansible_product_uuid }}"
     #   when: ansible_product_uuid is defined
 
-    # - debug:
-    #     msg: "System {{ inventory_hostname }} has gateway {{ ansible_default_ipv4.gateway }}"
-    #   when: ansible_default_ipv4.gateway is defined
+    - debug:
+        msg: "System {{ inventory_hostname }} has gateway {{ ansible_default_ipv4.gateway }}"
+      when: ansible_default_ipv4.gateway is defined
 
     # - shell: /usr/bin/uptime
     #   register: result
