--- a/lab-03/exercise-03.yml
+++ b/lab-03/exercise-03.yml
@@ -1,12 +1,16 @@
 ---
 
 
-- hosts: ubuntu
-  name: Installing apache2 on Ubuntu
-  tasks:
-    - apt: pkg=apache2 state=latest
+# - hosts: ubuntu
+#   name: Installing apache2 on Ubuntu
+#   tasks:
+#     - apt: pkg=apache2 state=latest
 
-- hosts: rhel
-  name: Installing httpd on rhel
+- hosts: node01
+  name: Installing 10 packages
   tasks:
-    - yum: pkg=httpd state=latest
+    - yum: pkg="{{ item }}" state=latest
+    with_items:
+     - strace
+     - vim-common
+     - git
