--- a/lab-03/exercise-03.yml
+++ b/lab-03/exercise-03.yml
@@ -1,12 +1,12 @@
 ---
 
 
-- hosts: ubuntu
-  name: Installing apache2 on Ubuntu
-  tasks:
-    - apt: pkg=apache2 state=latest
+#- hosts: ubuntu
+ # name: Installing apache2 on Ubuntu
+  # tasks:
+    #- apt: pkg=apache2 state=latest
 
-- hosts: rhel
-  name: Installing httpd on rhel
+- hosts: DBservers
+  name: Installing httpd on DBServers
   tasks:
     - yum: pkg=httpd state=latest
