--- a/lab-06/terminate_ec2_instance.yml
+++ b/lab-06/terminate_ec2_instance.yml
@@ -5,12 +5,10 @@
   tasks:
     - name: Terminate instance
       ec2:
-         instance_ids: i-02705a18317c8492c
+         instance_ids: ami-0e12cbde3e77cbb98
          wait: true
          state: absent
-         region: ca-central-1
-         aws_access_key: "{{ lookup('env', 'AWS_ACCESS_KEY') }}"
-         aws_secret_key: "{{ lookup('env', 'AWS_SECRET_KEY') }}"
+         region: eu-west-1
       register: ec2
     - name: Print all ec2 variables
       debug: var=ec2
