--- a/lab-06/terminate_ec2_instance.yml
+++ b/lab-06/terminate_ec2_instance.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Terminate instance
       ec2:
-         instance_ids: ami-0e12cbde3e77cbb98
+         instance_ids: i-0e34fb9c4296d3c27
          wait: true
          state: absent
          region: eu-west-1
