--- a/lab-04/roles/deploy_static_content/tasks/main.yml
+++ b/lab-04/roles/deploy_static_content/tasks/main.yml
@@ -13,4 +13,4 @@
   with_items: "{{content.stdout_lines}}"
 
 - name: Deploy static content
-  unarchive: src={{ }} dest=/var/www/html
+  unarchive: src={{ static_content }} dest=/var/www/html
