--- a/lab-05/roles/httpd/tasks/main.yml
+++ b/lab-05/roles/httpd/tasks/main.yml
@@ -1,14 +1,7 @@
 ---
-- name: Install httpd server
-  yum: name=httpd state=present
-
-- name: Start httpd
-  service: name=httpd state=started enabled=yes
-
-- name: Update httpd default config
-  copy: src=httpd.conf dest=/etc/httpd/conf/
-  notify:
-    - Reload httpd configuration
+- include_tasks: install.yml
+- include_tasks: config.yml
+- include_tasks: service.yml
 
 - name: Flush handlers
   meta: flush_handlers
