added lab-08 with mssql docker example for amazon linux ami

--- a/lab-08/roles/mssql/tasks/main.yml
+++ b/lab-08/roles/mssql/tasks/main.yml
@@ -2,7 +2,7 @@
   docker_container:
     user: root
     network_mode: host
-    name: sa-elk-elasticsearch
+    name: mssql-server-linux
     image: microsoft/mssql-server-linux:2017-latest
     state: started
     pull: yes
