--- a/lab-02/conditions.yml
+++ b/lab-02/conditions.yml
@@ -13,11 +13,12 @@
     #   #when: result is failed
 
     - debug:
-        var: result
+        var: result.stdout_lines[0]
 
     - name: Getting OS version if result was succeeded 
-      command: cat /etc/redhat-release
+      command: cat /etc/redhat-release1
       when: result is succeeded  # if result === succeed
+      ignore_errors: True
 
     - name: Executing the task if result was skipped
       command: /bin/still/something_else
