--- a/lab-02/java-httpd.yml
+++ b/lab-02/java-httpd.yml
@@ -15,3 +15,7 @@
   tasks:
   - name: Install default-jdk
     yum: name=java-1.8.0-openjdk state=present
+    when: ansible_os_family == "RedHat"
+  - name: Install default-jdk for Debian
+    apt: name=java-1.8.0-openjdk state=present
+    when: ansible_os_family == "Debian"
