--- a/lab-03/ansible-vars.yaml
+++ b/lab-03/ansible-vars.yaml
@@ -1,45 +1,45 @@
-- hosts: node01
-  gather_facts: true
-  vars:
-    my_name: Chandan
-  tasks:
-    # - yum:
-    #     pkg: httpd
-    #     state: installed
-    #   when: ansible_distribution == "RedHat"
+# - hosts: node01
+#   gather_facts: true
+#   vars:
+#     my_name: Chandan
+#   tasks:
+#     # - yum:
+#     #     pkg: httpd
+#     #     state: installed
+#     #   when: ansible_distribution == "RedHat"
     
-    # - apt:
-    #     pkg: apache2
-    #     state: installed
-    #   when: ansible_distribution == "Ubuntu"
+#     # - apt:
+#     #     pkg: apache2
+#     #     state: installed
+#     #   when: ansible_distribution == "Ubuntu"
 
-    # # Example that prints the loopback address and gateway for each host
-    # - debug:
-    #     msg: "System {{ inventory_hostname }} has uuid {{ ansible_product_uuid }}"
-    #   when: ansible_product_uuid is defined
+#     # # Example that prints the loopback address and gateway for each host
+#     # - debug:
+#     #     msg: "System {{ inventory_hostname }} has uuid {{ ansible_product_uuid }}"
+#     #   when: ansible_product_uuid is defined
 
-    # - debug:
-    #     msg: "System {{ inventory_hostname }} has gateway {{ ansible_default_ipv4.gateway }}"
-    #   when: ansible_default_ipv4.gateway is defined
+#     # - debug:
+#     #     msg: "System {{ inventory_hostname }} has gateway {{ ansible_default_ipv4.gateway }}"
+#     #   when: ansible_default_ipv4.gateway is defined
 
-    # - shell: /usr/bin/uptime
-    #   register: result
+#     # - shell: /usr/bin/uptime
+#     #   register: result
 
-    # - debug:
-    #     var: result
-    # - debug:
-    #     msg: "{{ my_name }}"
-    #   when: my_name == "beCloudReady"
+#     # - debug:
+#     #     var: result
+#     # - debug:
+#     #     msg: "{{ my_name }}"
+#     #   when: my_name == "beCloudReady"
 
-    - name: Display all variables/facts known for a host
-      debug:
-        var: hostvars[inventory_hostname]
+#     - name: Display all variables/facts known for a host
+#       debug:
+#         var: hostvars[inventory_hostname]
       
 
-    - name: Display some varialbes variables/facts known for a host
-      debug:
-        var: hostvars[inventory_hostname].ansible_all_ipv4_addresses[0]
-      when: hostvars[inventory_hostname].ansible_all_ipv4_addresses[0] == "172.31.9.4"
+#     - name: Display some varialbes variables/facts known for a host
+#       debug:
+#         var: hostvars[inventory_hostname].ansible_all_ipv4_addresses[0]
+#       when: hostvars[inventory_hostname].ansible_all_ipv4_addresses[0] == "172.31.9.4"
 # - hosts: all
 #   name: Setting up the hostnames
 #   tasks:
@@ -49,12 +49,19 @@
 
 
 
-# - hosts: webservers
-#   gather_facts: false
-#   name: Running group var debugs for webserver
-#   tasks:
-#    - debug: 
-#       var: my_group_var
+- hosts: webservers
+  gather_facts: false
+  name: Running group var debugs for webserver
+  tasks:
+   - debug: 
+      var: my_group_var
+
+- hosts: dbserver
+  gather_facts: false
+  name: Running group var debugs for webserver
+  tasks:
+   - debug: 
+      var: my_group_var
 
 #    - name: Checking appserver groupvars in Webserver Hosts
 #      debug:
