Added changes and fixed some playbooks

--- a/lab-08/roles/docker/tasks/main.yml
+++ b/lab-08/roles/docker/tasks/main.yml
@@ -1,5 +1,5 @@
-# - name: upgrade all packages
-#   yum: name=* state=latest
+- name: upgrade all packages
+  yum: name=* state=latest
 
 - name: Install docker, pip
   yum: pkg={{ item }} state=installed
