--- a/lab-05/vars.yml
+++ b/lab-05/vars.yml
@@ -2,7 +2,5 @@
   static_content_file_name: static_content.zip
   testing: hello world
   testingline: 234
-  alakjlsdfhas
-  alskdfaljshdf
-  asdlkfjhasklfhalsk
-  asdfas 
+  display_message: Hello world
+  
