--- a/lab-05-roles/roles/httpd/tasks/main.yml
+++ b/lab-05-roles/roles/httpd/tasks/main.yml
@@ -1,15 +1,6 @@
 ---
-- name: Install httpd server
-  yum: name=httpd state=present
+- name: Include a play after another play
+  include: ubuntu.yml
+  when: ansible_distribution == "Ubuntu"
 
-- name: Start httpd
-  service: name=httpd state=started enabled=yes
-
-- name: Update httpd default config
-  copy: src=httpd.conf dest=/etc/httpd/conf/
-  notify:
-    - Reload httpd configuration
-
-- name: Flush handlers
-  meta: flush_handlers
 
