Added conditional jinja

--- a/lab-05-roles/roles/httpd/tasks/main.yml
+++ b/lab-05-roles/roles/httpd/tasks/main.yml
@@ -3,4 +3,7 @@
   include: ubuntu.yml
   when: ansible_distribution == "Ubuntu"
 
+- name: Include a play after another play
+  include: redhat.yml
+  when: ansible_distribution == "CentOS"
 
