changed dnf to yum

--- a/lab-02-plays/java-httpd.yml
+++ b/lab-02-plays/java-httpd.yml
@@ -28,7 +28,7 @@
 - hosts: dbservers # Host or Group of Selections
   tasks:
   - name: Install Mysql web server # Naming the task for debug purpose
-    dnf: pkg=mysql state=installed  # Using module ( doing the task )
+    yum: pkg=mysql state=installed  # Using module ( doing the task )
   
 
 - hosts: appservers
